--- a/css/style.css
+++ b/css/style.css
@@ -1524,16 +1524,16 @@ h6 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border: 1px solid #5f5d5d;
+  border: 1px solid #ef5b70;
   padding: 15px 205px;
 }
 
 .filter-button path {
-  fill: #5f5d5d;
+  fill: #ef5b70;
 }
 
 .filter-button-text {
-  color: #5f5d5d;
+  color: #ef5b70;
   font-family: "Lato", sans-serif;
   font-size: 16px;
   font-weight: 700;
@@ -1570,14 +1570,15 @@ h6 {
     -webkit-transition: all 0.2s linear;
     transition: all 0.2s linear;
     border: 1px solid #ef5b70;
+    background: #ef5b70;
   }
   .filter-button:hover path {
-    fill: #ef5b70;
+    fill: #fff;
     -webkit-transition: all 0.2s linear;
     transition: all 0.2s linear;
   }
   .filter-button:hover .filter-button-text {
-    color: #ef5b70;
+    color: #fff;
     -webkit-transition: all 0.2s linear;
     transition: all 0.2s linear;
   }
