--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -361,6 +361,7 @@
       line-height: 38px;
       font-weight: 700;
       letter-spacing: 1px;
+      padding-left: 24px;
       span {
          color: $red;
       }
