--- a/css/style.css
+++ b/css/style.css
@@ -535,6 +535,7 @@ h6 {
   line-height: 38px;
   font-weight: 700;
   letter-spacing: 1px;
+  padding-left: 24px;
 }
 
 .head-text .head_text span {
@@ -993,12 +994,15 @@ h6 {
   width: 100%;
 }
 
-.features .feature_img h3 {
+.features .feature_img .sale {
   position: absolute;
   top: 130px;
   left: 39px;
   color: #fff;
   font-family: "Lato", sans-serif;
+}
+
+.features .feature_img .sale h3 {
   font-size: 54px;
   font-weight: 700;
   text-transform: uppercase;
@@ -1006,13 +1010,13 @@ h6 {
   line-height: normal;
 }
 
-.features .feature_img span {
+.features .feature_img .sale span {
   color: #f16d7f;
   letter-spacing: 1.5px;
   line-height: normal;
 }
 
-.features .feature_img p {
+.features .feature_img .sale p {
   font-size: 32px;
   letter-spacing: 0.9px;
   line-height: normal;
