--- a/scss/_body-home.scss
+++ b/scss/_body-home.scss
@@ -150,27 +150,29 @@
          height: 100%;
          width: 100%;
       }
-      h3 {
+      .sale {
          position: absolute;
          top: 130px;
          left: 39px;
          color: $white;
          font-family: $lato;
-         font-size: 54px;
-         font-weight: 700;
-         text-transform: uppercase;
-         letter-spacing: 1.5px;
-         line-height: normal;
-      }
-      span {
-         color: $red;
-         letter-spacing: 1.5px;
-         line-height: normal;
-      }
-      p {
-         font-size: 32px;
-         letter-spacing: 0.9px;
-         line-height: normal;
+         h3 {
+            font-size: 54px;
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 1.5px;
+            line-height: normal;
+         }
+         span {
+            color: $red;
+            letter-spacing: 1.5px;
+            line-height: normal;
+         }
+         p {
+            font-size: 32px;
+            letter-spacing: 0.9px;
+            line-height: normal;
+         }
       }
    }
 }
