--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -207,7 +207,7 @@
    }
 }
 
-.fa-caret-down{
+.fa-caret-down {
    padding-left: 8px;
 }
 
@@ -235,10 +235,9 @@
    }
 }
 
-
 .header__nav-bottom-wrapper {
    &::before {
-      content: "";
+      /* content: "";
       position: absolute;
       border-left: 1px solid #e8e8e8;
       border-top: 1px solid #e8e8e8;
@@ -247,16 +246,16 @@
       height: 10px;
       transform: rotate(45deg);
       top: -5px;
-      left: 136px;
+      left: 136px; */
    }
 }
 
 .nav-bottom-wrapper-hover {
    display: none;
-   position: absolute;
+   position: fixed;
    padding-top: 10px;
-   top: 15px;
-   left: -116px;
+   top: 14%;
+   left: 25%;
    z-index: 2;
 }
 
@@ -269,7 +268,7 @@
    column-gap: 46px;
    row-gap: 0;
    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr) minmax(220px, 1fr) minmax(255px, 1fr));
-   grid-template-rows: 168px;
+   grid-template-rows: 1fr;
    padding: 21px 21px 19px 25px;
    max-width: 850px;
    background-color: white;
@@ -540,7 +539,84 @@
       }
    }
 }
-
+.man-mm::before {
+   content: "";
+   position: absolute;
+   border-left: 1px solid #e8e8e8;
+   border-top: 1px solid #e8e8e8;
+   background: $white;
+   width: 10px;
+   height: 10px;
+   z-index: 5;
+   transform: rotate(45deg);
+   top: 5px;
+   left: 100px;
+}
+.women-mm::before {
+   content: "";
+   position: absolute;
+   border-left: 1px solid #e8e8e8;
+   border-top: 1px solid #e8e8e8;
+   background: $white;
+   width: 10px;
+   height: 10px;
+   z-index: 5;
+   transform: rotate(45deg);
+   top: 5px;
+   left: 190px;
+}
+.kids-mm::before {
+   content: "";
+   position: absolute;
+   border-left: 1px solid #e8e8e8;
+   border-top: 1px solid #e8e8e8;
+   background: $white;
+   width: 10px;
+   height: 10px;
+   z-index: 5;
+   transform: rotate(45deg);
+   top: 5px;
+   left: 280px;
+}
+.accoseriese-mm::before {
+   content: "";
+   position: absolute;
+   border-left: 1px solid #e8e8e8;
+   border-top: 1px solid #e8e8e8;
+   background: $white;
+   width: 10px;
+   height: 10px;
+   z-index: 5;
+   transform: rotate(45deg);
+   top: 5px;
+   left: 385px;
+}
+.featured-mm::before {
+   content: "";
+   position: absolute;
+   border-left: 1px solid #e8e8e8;
+   border-top: 1px solid #e8e8e8;
+   background: $white;
+   width: 10px;
+   height: 10px;
+   z-index: 5;
+   transform: rotate(45deg);
+   top: 5px;
+   left: 510px;
+}
+.deals-mm::before {
+   content: "";
+   position: absolute;
+   border-left: 1px solid #e8e8e8;
+   border-top: 1px solid #e8e8e8;
+   background: $white;
+   width: 10px;
+   height: 10px;
+   z-index: 5;
+   transform: rotate(45deg);
+   top: 5px;
+   left: 630px;
+}
 /* media */
 
 @media (min-width: 768px) {
