--- a/scss/_variebles.scss
+++ b/scss/_variebles.scss
@@ -1,7 +1,10 @@
 $lato: "Lato", sans-serif;
+$open: "Open Sans", sans-serif;
 $latol: "Lato-Light";
 $latob: "Lato-Black";
 $red: #f16d7f;
 $grey: #222222;
 $white: #fff;
 $hover: #ffafba;
+$light_grey: #6f6e6e;
+$ff: 14px;
