--- a/scss/_body-home.scss
+++ b/scss/_body-home.scss
@@ -57,7 +57,7 @@
 .products-text {
    color: #9f9f9f;
    font-family: $lato;
-   font-size: 14px;
+   font-size: $ff;
    line-height: 40px;
    letter-spacing: 0.35px;
 }
@@ -195,7 +195,7 @@
    svg {
       position: absolute;
    }
-   div {
+   &-text {
       padding-left: 78px;
       h3 {
          padding: 5px 0 11px;
@@ -209,7 +209,7 @@
       p {
          color: #fbfbfb;
          font-family: $lato;
-         font-size: 14px;
+         font-size: $ff;
          font-weight: 300;
          letter-spacing: 0.35px;
          line-height: 23px;
@@ -310,7 +310,7 @@
       text-transform: uppercase;
    }
    p {
-      font-size: 14px;
+      font-size: $ff;
       padding-bottom: 25px;
       letter-spacing: 0.35px;
       line-height: 24px;
@@ -329,7 +329,7 @@
          opacity: 0.67;
          color: #222224;
          font-family: $lato;
-         font-size: 14px;
+         font-size: $ff;
          font-weight: 400;
          line-height: 54px;
          letter-spacing: 0.35px;
@@ -342,7 +342,7 @@
       background: $red;
       border-radius: 0 23px 23px 0;
       font-family: $lato;
-      font-size: 14px;
+      font-size: $ff;
       letter-spacing: 0.35px;
    }
 }
