--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -29,7 +29,7 @@
    p {
       color: #898989;
       font-family: $lato;
-      font-size: 14px;
+      font-size: $ff;
       font-weight: 300;
       line-height: 24px;
       letter-spacing: 0.35px;
