--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,3 +24,4 @@
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
